--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,14 @@
  }
 
 .post-area {
+  margin : auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
   padding: 40px;
-  width: 100%;
-  min-height: 150px;
+  width: 90%;
+  min-height: 180px;
   background-color: white;
-  border-bottom: 1px dotted #ddd;
+  box-shadow: 1px 1px 2px 2px #888888;
 }
 
 .post-area a:link, .post-area a:visited {
